@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.931 2009-07-16 13:04:15 ub Exp $
+# $Id: CHANGES,v 1.932 2009-07-16 16:14:19 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.0 beta6 (2009/07/??)
+ - (2009/07/16) Fixed bug# 3997 - Wrong named variable in AgentTicketZoom.
  - (2009/07/16) Fixed bug# 3993 - Error message about wrong email adress
     not visible in AgentTicketPhone and AgentTicketEmail if AutoComplete
     is enabled.
